added sad and preview pages. Also, added slim nav.

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -17,3 +17,10 @@
     font-style: normal;
     font-weight: 100;
 }
+
+#links {
+    color: white;
+    font-family: falcons;
+    font-weight: 30;
+
+}
